# appeldryck

./: .gitignore  TODO  pyproject.toml  setup.py
alchemiter/: alchemiter.py
appeldryck/: __init__.py  _context.py  _evaluator.py  _parser.py  _renderer.py  appeldryck.py  builder.py  context.py  dryck.py  evaluator.py  parser.py  renderer.py
appeldryck/parser/: ast.py  baseparse.py  lex.py  parse.py  rawparse.py  test.py
dryck/: __init__.py  _evaluator.py  _parser.py  _renderer.py
tests/: inline.dryck
