[project]
name = "appeldryck"
version = "0.5.0"
description = ""
authors = [ { name = "John Leen", email = "jleen@saturnvalley.org" } ]
requires-python = ">=3.12"

[project.scripts]
dryck = 'appeldryck.builder:build'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
